# prompt-benchmark

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/prompt_benchmark/: __init__.py  framework.py
tests/: test_framework.py
